<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/ctl_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginStart="@dimen/expandedTitleMarginStart"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/tb_title">

            <ImageView
                android:id="@+id/img_content_cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_title"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.ActionBar">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/douban_rating"
                android:textSize="@dimen/douban_rating_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RatingBar
                    android:id="@+id/rb_douban_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contextClickable="false"
                    android:isIndicator="true"
                    android:numStars="5" />

                <TextView
                    android:id="@+id/tv_douban_rating_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="0.0"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/rating_text_size" />

            </RelativeLayout>

            <!--简介-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/summary"
                android:textSize="@dimen/douban_rating_size" />

            <TextView
                android:id="@+id/tv_content_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/douban_rating_size" />

            <!--作者-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/author"
                android:textSize="@dimen/douban_rating_size" />

            <TextView
                android:id="@+id/tv_content_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/douban_rating_size" />

            <!--译者-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/translator"
                android:textSize="@dimen/douban_rating_size" />

            <TextView
                android:id="@+id/tv_content_translator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/douban_rating_size" />

            <!--页数-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/pages"
                android:textSize="@dimen/douban_rating_size" />

            <TextView
                android:id="@+id/tv_content_pages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/douban_rating_size" />

            <!--出版社-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/publisher"
                android:textSize="@dimen/douban_rating_size" />

            <TextView
                android:id="@+id/tv_content_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/douban_rating_size" />

            <!--出版日期-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/pubdate"
                android:textSize="@dimen/douban_rating_size" />

            <TextView
                android:id="@+id/tv_content_pubdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/douban_rating_size" />

            <!--标签-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/tag"
                android:textSize="@dimen/douban_rating_size" />

            <TextView
                android:id="@+id/tv_content_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/douban_rating_size" />

            <!--目录-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/catalog"
                android:textSize="@dimen/douban_rating_size" />

            <TextView
                android:id="@+id/tv_content_catalog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/douban_rating_size" />

            <RelativeLayout
                android:id="@+id/rl_douban_alt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/douban_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/douban_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_toRightOf="@+id/douban_ic"
                    android:text="@string/open_on_douban"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/douban_rating_size" />

            </RelativeLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <!--<android.support.design.widget.FloatingActionButton-->
    <!--android:id="@+id/fab_change_state"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="right|bottom"-->
    <!--android:layout_margin="@dimen/activity_horizontal_margin"-->
    <!--android:clickable="true"-->
    <!--android:src="@drawable/ic_loop"-->
    <!--app:fabSize="normal" />-->

    <com.juhezi.juprogressbar.View.JuProgressbar
        android:id="@+id/jp_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:color1="@color/yellow"
        app:color2="@color/blue"
        app:color3="@color/red"
        app:colorNum="3"></com.juhezi.juprogressbar.View.JuProgressbar>

</android.support.design.widget.CoordinatorLayout>